@@ -106,7 +106,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
 - [ ] See if we can generate a first landscape
 **** Start to handle the Profile GameState
      I would like to try to handle SSH key to handle authentication.
-     It can be useful if we use a git-base filesystem.
+     It can be usefull if we use a git-base filesystem.
 - [ ] Find a lib to handle (generate etc...) SSH asymetric keys
   The library must be able to generate keys. According to this link 
   (http://stackoverflow.com/a/4985328) it seems https://www.libssh.org/ has
@@ -124,6 +124,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
      see https://scan.coverity.com/download for more (currently at 4%)
 - [ ] rev 253 uploaded to coverity scan 23 Nov     
 **** TODO Options gamestate
+     CLOCK: [2017-01-26 jeu. 19:39]--[2017-01-26 jeu. 20:25] =>  0:46
      CLOCK: [2017-01-24 mar. 19:03]--[2017-01-24 mar. 19:08] =>  0:05
      CLOCK: [2017-01-17 mar. 12:17]--[2017-01-17 mar. 12:46] =>  0:29
      CLOCK: [2017-01-09 lun. 14:59]--[2017-01-09 lun. 15:23] =>  0:24
@@ -166,7 +167,13 @@ Error is fixed, was due to a src/services/Services.hpp old code
 - [X] GameEngine finally uses ResolutionHandler to get current resolution
 - [X] May remove the src/client/LoadingBar.* (not used anymore)
 - [ ] Maybe we could ask for OgreCfgSaver save using a CeguiDialog
-- [ ] Some overlay disappears in 1280x1024 resolution
+  - [ ] Maybe we need a ModalDialog class that handles an bool exec() method
+    We have an issue with the blocking exec function.
+    Maybe We must register a listener for this class and wit
+  - [ ] Create a ConfirmationDialog class (based on ModalDialog)
+- [ ] Some overlays disappear in 1280x1024 resolution
+  - List all overlays affected by this bug
+    At least tempMessage
 **** TODO Handle doxygen documentation
      CLOCK: [2017-01-17 mar. 10:37]--[2017-01-17 mar. 11:04] =>  0:27
      CLOCK: [2016-12-12 lun. 02:12]--[2016-12-12 lun. 02:46] =>  0:34
