@@ -1,0 +1,54 @@
+/*
+ * Copyright 2011-2017 Jerome Pasquier
+ *
+ * This file is part of rainbrurpg-client.
+ *
+ * rainbrurpg-client is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * rainbrurpg-client is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with rainbrurpg-client.  If not, see <http://www.gnu.org/licenses/>.
+ *
+ */
+
+#include "ModalDialog.hpp"
+
+#include <iostream>
+
+/* Named constructor
+ *
+ * Create a dialog based on a CEGUI XML-based layout file.
+ *
+ * \param layoutName the xml layout filename.
+ * \param uniqueName a context name that is unique to avoid a 
+ *          CEGUI::AlreadyExistsException
+ *
+ */
+ModalDialog::ModalDialog(const string& layoutName, const string& uniqueName):
+  CeguiDialog(layoutName, uniqueName),
+  waiting(false)
+{
+
+}
+
+ModalDialog::~ModalDialog()
+{
+
+}
+
+
+bool
+ModalDialog::exec()
+{
+  waiting = true;
+  show();
+}
+
+
