@@ -1,3 +1,8 @@
+2017-01-26  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/client/GameEngine.cpp (reconfigure): now using ModalDialog.
+	* src/client/ModalDialog.hpp (ModalDialog): first implementation.
+
 2017-01-24  Jérôme Pasquier  <rainbru@free.fr>
 
 	* src/client/LoadingBar.cpp: remove unneeded class.
